--- a/directives/viewEntriesDirective.html
+++ b/directives/viewEntriesDirective.html
@@ -1,4 +1,4 @@
-<div ng-repeat="entries in groupedEntries track by $index" class="rounded">
+<div ng-repeat="entries in groupedEntries | orderBy:entries.key track by $index" class="rounded">
     <div id="div{{entry.EntryID}}" ng-repeat="entry in entries track by $index" class="rounded" ng-class="{'incomeEntry':entry.IsExpense==0, 'expenseEntry':entry.IsExpense==1}">
         <table class="header">
             <tr>
@@ -17,6 +17,7 @@
             </tr>
         </table>
     </div>
+    Total expense : {{entries.totalExpense|currency:"":0}} 
 </div>
 <div class="modal" id="modalEdit" role="dialog">
     <div class="modal-dialog">
