--- a/directives/registerEntryDirective.html
+++ b/directives/registerEntryDirective.html
@@ -12,22 +12,24 @@
         <input type="date" name="Date" ng-model="entry.EntryDate" class="form-control" />
     </div>
     <div class="form-group">
-        <button type="button" ng-model="entry.IsExpense" ng-click="entry.IsExpense = !entry.IsExpense" 
-            ng-class="{'btn-danger': entry.IsExpense, 'btn-success': !entry.IsExpense}" 
+        <button type="button" ng-model="entry.IsExpense" ng-click="entry.IsExpense = !entry.IsExpense" ng-class="{'btn-danger': entry.IsExpense, 'btn-success': !entry.IsExpense}"
             class="form-control"><strong>{{entry.IsExpense?"Expense":"Income"}}</strong></button>
     </div>
     <div class="form-group">
         <label for="Source">Transaction mode</label>
-        <select name="Source" ng-model="entry.Source" class="form-control">
-            <option ng-repeat="opt in Source" value={{opt.key}}>{{opt.value}}</option>
-        </select>
+        <div class="transactionMode" ng-class="{fullWidth: entry.Source=='1' }">
+            <select name="Source" ng-model="entry.Source" class="form-control">
+                <option ng-repeat="opt in Source | filter:{parentKey:'!'}" value={{opt.key}}>{{opt.value}}</option>
+            </select>
+        </div>
+        <cc-bank mode="entry.Source"></cc-bank>
     </div>
-    <div>
+    <div class="action">
         <table style="width:100%" class="text-center">
             <tr>
                 <td><button type="button" ng-if="showCancel==false" ng-click="resetEntry()" class="btn btn-default">Reset</button></td>
                 <td><button type="button" ng-if="showCancel==true" data-dismiss="modal" class="btn btn-default">Close</button></td>
-                <td><button type="button" ng-click="saveEntry(entry.EntryID)" class="btn btn-primary">Save</button></td>                
+                <td><button type="button" ng-click="saveEntry(entry.EntryID)" class="btn btn-primary">Save</button></td>
             </tr>
         </table>
     </div>
