1. Provided correct location to access images 2. Dashboard header style change

--- a/directives/ccBankSelector.html
+++ b/directives/ccBankSelector.html
@@ -1,11 +1,11 @@
 <div ng-show="imgdata.length > 0" class="bankSelector">
     <div ng-click="toggleList()" class="selection bankName">
-        <img src="{{opt.icon}}" ng-repeat="opt in imgdata | filter:{'key':selected}" />
+        <img ng-src="{{opt.icon}}" ng-repeat="opt in imgdata | filter:{'key':selected}" />
     </div>
     <div id="list" class="lister" style="display: none;">
         <ul class="nav selectionList">
             <li ng-click="selectBank(opt.key)" ng-repeat="opt in imgdata">
-                <div class="bankName"><img src="{{opt.icon}}" /></div>
+                <div class="bankName"><img ng-src="{{opt.icon}}" /></div>
             </li>
         </ul>
     </div>
