--- a/directives/viewEntriesDirective.html
+++ b/directives/viewEntriesDirective.html
@@ -1,5 +1,5 @@
-<div ng-repeat="entries in groupedEntries | orderBy:entries.key track by $index" class="rounded">
-    <div id="div{{entry.EntryID}}" ng-repeat="entry in entries track by $index" class="rounded" ng-class="{'incomeEntry':entry.IsExpense==0, 'expenseEntry':entry.IsExpense==1}">
+<div ng-repeat="groupedEntry in entries track by $index" class="oneDay">
+    <div id="div{{entry.EntryID}}" ng-repeat="entry in groupedEntry.group track by $index" class="rounded" ng-class="{'incomeEntry':entry.IsExpense==0, 'expenseEntry':entry.IsExpense==1}">
         <table class="header">
             <tr>
                 <td>
@@ -17,7 +17,9 @@
             </tr>
         </table>
     </div>
-    Total expense : {{entries.totalExpense|currency:"":0}} 
+    <div class="totalExpense">
+        <i>Total expense:</i> <b>{{groupedEntry.totalExpense|currency:"":0}}</b>
+    </div>
 </div>
 <div class="modal" id="modalEdit" role="dialog">
     <div class="modal-dialog">
