1. Restructure php code 2. Base for favourites

--- a/directives/dashboard.html
+++ b/directives/dashboard.html
@@ -6,7 +6,7 @@
         chart-data="data" chart-labels="labels" chart-series="series"></canvas>
 </div>
 <br/>
-<view-entries-directive ng-if="top5.length>0" top5="top5"></view-entries-directive>
+<view-entries-directive ng-if="today.length>0" today="today"></view-entries-directive>
 <div class="instantAdd" ng-click="quickAdd()">
     <i class="fa fa-plus"></i>
 </div>
